--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -1,2 +1,17 @@
-configurations.maybeCreate("default")
-artifacts.add("default", file('YouTubeAndroidPlayerApi.jar'))
+apply plugin: 'com.android.library'
+
+android {
+    compileSdkVersion 25
+    buildToolsVersion '25.0.2'
+
+    defaultConfig {
+        minSdkVersion 19
+        targetSdkVersion 25
+        versionCode 1
+        versionName "1.2.2"
+    }
+}
+
+dependencies {
+    compile fileTree(dir: 'libs', include: ['*.jar'])
+}
